# hapenny

./: .env.toolchain  .gitignore  .pdm.toml  README.mkdn  code  pyproject.toml  tinybxtest.py  tinybxtestbox.py  wbtest.py
hapenny/: bus.py  cpu.py  decoder.py  ewbox.py  fdbox.py  gpio.py  mem.py  regfile16.py  sbox.py  serial.py  wbmem.py  widget.py
montool/src/: console.rs  main.rs
notes/: 20250309.mkdn
tinyboot/: build.rs  link.x
