[project]
dynamic = ["version"]

name = "hapenny"

requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "amaranth[builtin-yosys] @ git+https://github.com/amaranth-lang/amaranth@v0.5.4 ",
    "amaranth-boards@git+https://github.com/amaranth-lang/amaranth-boards",
    "amaranth_soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "yowasp-nextpnr-ice40",
    "yowasp-yosys",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test.composite = ["test-code"]
test-code.cmd = "python -m unittest discover -t . -s tests -v"
